
===========
Changes log  
===========

@version-full@ (@release-date@)
[Bugs fixed]
 - Guard.authorize() doesn't call authenticate() anymore as doHandle() was already checking
   this point. Was pontially resulting in two calls to authenticate().
 
[API changes]
 - 
 
[Enhancements] 
 - 
 
1.0 RC3 (2007-01-19)
[Bugs fixed]
 - Fixed bug with the uri parsing in the DirectoryResource class. The query part of the resource uri
   is removed before sending request to the file connector.
 - The content negotiation was throwing class cast exceptions when a resource was 
   returning simple Variant instance via getVariants().
 - Fixed potential NPE in HttpRequest due to autoboxing. Reported by Valdis Rigdon.
 - Fixed bug preventing the Jetty connector from returning error status representations.
 - Fixed bug in DomRepresentation when outputting an instance based on a XML representation.
 - Fixed bug in Jetty connector potentially trying to send a response twice. Reported by
   Diggory Briercliffe.
 - VirtualHost now always set the rootRef, even if the attached Restlet isn't an Application.
 - Fixed bug in HttpRequest constructor in case the path of the URI starts with "//". Reported by
   Vincent Lari.

[API changes]
 - Added ReferenceList.getWebRepresentation() method, using exsiting logic from Directory.
 - Deprecated Directory.getDirectoryVariants() method and added getIndexVariants() + 
   getIndexRepresentation() method to follow recent refactoring in Resource.
 - ClientInfo.port and ServerInfo.port are now 'int' instead of 'Integer' to prevent autoboxing issues.
 - Added getStatus(Method, Variant) and hasSome() methods to Conditions. Logic moved from private Handler methods.
 - Added Guard.getSecret() method for easier customization of the authentication system.
 - Guard.reject() is now public to allow standalone usage, without filtering.
 - Moved Resource.identifier property to Variant class.
 - Variant and Representation don't derive from Resource anymore.